# dv-rbac

./: .env_example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 11f25f10a9f6_权限表重新设计.py  6cbdba972977_使用外键_且不再使用自定义的中间表.py  8b8b7157f5c5_权限表重设计_拆分菜单表.py  8c0f67d9a5c4_ks.py  b11caf345d0f_gx.py  cf1c66be02ff_使用外键_且不再使用自定义的中间表.py
app/: config.py  model_loader.py
app/auth/: controllers.py  routers.py  schemas.py
app/core/: apis.py  crud_service.py  database.py  depends.py  exception_handler.py  initial_data.py  logging.py  logging_config.py  query_service.py  schemas.py  security.py
app/rbac_core/: __init__.py  associations.py  enums.py  rbac.py  routers.py
app/rbac_core/department/: controllers.py  models.py  routers.py  schemas.py  services.py
app/rbac_core/menu/: controllers.py  models.py  routers.py  schemas.py  services.py
app/rbac_core/permission/: controllers.py  models.py  routers.py  schemas.py  services.py
app/rbac_core/role/: controllers.py  models.py  routers.py  schemas.py  services.py
app/rbac_core/user/: controllers.py  models.py  routers.py  schemas.py  services.py
backend/application/: settings.py  urls.py
backend/system/: models.py  serializers.py  urls.py  views.py
backend/system/migrations/: 0001_initial.py  0002_alter_role_router_permission_alter_role_user_menu.py  0003_menu_icon.py  0004_remove_menu_is_catalog.py  (+6 more)
cli/: __main__.py  app.py  collect_api_permissions.py  init_super_user.py
web/: components.d.ts  package.json  vite.config.ts
web/src/: App.vue  main.ts
(+18 files in other folders)
